apps/consul-canary-demo-2/rollout.yaml
#Rollout yaml parameters: https://argoproj.github.io/argo-rollouts/features/specification/

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-canary-demo-2
spec:
  replicas: 5
  strategy:
    canary:
      stableService:  rollouts-service-v1
      canaryService:  rollouts-service-v2
      canaryMetadata:
        annotations:
          # consul.hashicorp.com/connect-service: "rollouts-service-v2"
      stableMetadata:
        annotations:
          # consul.hashicorp.com/connect-service: "rollouts-service-v1"
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: route-canary-demo-2
            namespace: default
        # alb:
        #   ingress:  canary-demo-2-ingress
        #   rootService:  rollouts-service
        #   servicePort: 80
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 50
        - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-service: "rollouts-service"
      labels:
        app: rollouts-demo
    spec:
      serviceAccountName: rollouts-service
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:red
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
