apps/consul-canary-demo-2/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-service #not only SA but also a service needs to be created when it is refered from consul.hashicorp.com/connect-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-service-v1
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-service-v2
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
  type: NodePort
