apps/consul-canary-demo-2/header-route-1.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: header-route-1
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
      headers:
      - type: Exact
        name: "x-canary-target"
        value: "v2"
    backendRefs:
    - name: rollouts-service-v2
      kind: Service
      port: 80
    # - kind: Service
    #   name: ui
    #   port: 80
